# django_analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
customers/: admin.py  models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_customer_gender.py  0003_alter_customer_gender.py  0004_alter_customer_gender.py  0005_alter_customer_gender.py
customers/tests/: test_models.py
project/: settings.py  urls.py
